==> Kalycito-open-automation/openSAFETY_DEMO/src/app/demo-sn-gpio/target/stm32f103rb/upserial.c <==
#include <sn/upserial.h>
#include <common/platform.h>
#include <stm32f1xx_it.h>
#include <stm32f10x_usart.h>
#include <stm32f10x_gpio.h>
#include <stm32f10x_dma.h>
#define USARTx                          USART1
#define USARTx_RCC_PERIPH               RCC_APB2Periph_USART1
#define USARTx_RX_PIN                   GPIO_Pin_10
#define USARTx_TX_PIN                   GPIO_Pin_9
#define USARTx_GPIO_PORT                GPIOA
#define USARTx_GPIO_RCC_PERIPH          RCC_APB2Periph_GPIOA
#define DMAx_Channel_Tx                 DMA1_Channel4
#define DMAx_Channel_Rx                 DMA1_Channel5
#define DMAx_ChannelTx_IRQn             DMA1_Channel4_IRQn
#define DMAx_ChannelRx_IRQn             DMA1_Channel5_IRQn
#define DMAx_ChannelTx_IRQHandler       DMA1_Channel4_IRQHandler
#define DMAx_ChannelRx_IRQHandler       DMA1_Channel5_IRQHandler
#define DMAx_RCC_PERIPH                 RCC_AHBPeriph_DMA1
#define DMAx_FLAG_TE_Tx                 DMA1_FLAG_TE4
#define DMAx_FLAG_TE_Rx                 DMA1_FLAG_TE5
#define DMAx_FLAG_TC_Tx                 DMA1_FLAG_TC4
#define DMAx_FLAG_TC_Rx                 DMA1_FLAG_TC5
#define DMAx_IT_TE_Tx                   DMA1_IT_TE4
#define DMAx_IT_TE_Rx                   DMA1_IT_TE5
#define DMAx_IT_TC_Tx                   DMA1_IT_TC4
#define DMAx_IT_TC_Rx                   DMA1_IT_TC5

void upserial_exit(void)
{
    pfnTransfFin_l =  NULL;
    pfnReceiveFin_l = NULL;
    pfnTransfError_l = NULL;

    USART_DeInit(USARTx);

    /* Close the DMAx channels */
    closeDma();

    /* Close the GPIO pins */
    GPIO_DeInit(USARTx_GPIO_PORT);
}

BOOLEAN upserial_transmitBlock(volatile UINT8 * pData_p, UINT32 size_p)
{
    BOOLEAN fReturn = FALSE;

    if(pData_p != NULL && size_p > 0)
    {
        usartTransmit(pData_p, size_p);

        /* Wait until DMA transfer is finished */
        if(waitForTransferFinished(&fTxFinished_l, 0xFFFF))
        {
            /* Frame successfully transmitted */
            fReturn = TRUE;
        }
        else
        {
            /* Timeout occurred */
            USART_DMACmd(USARTx, USART_DMAReq_Tx, DISABLE);
        }

        fTxFinished_l = FALSE;
    }

    return fReturn;
}

BOOLEAN upserial_receiveBlock(volatile UINT8 * pData_p, UINT32 size_p, UINT32 timeoutMs_p)
{
    BOOLEAN fReturn = FALSE;

    if(pData_p != NULL && size_p > 0)
    {
        usartReceive(pData_p, size_p);

        /* Wait until DMA transfer is finished */
        if(waitForTransferFinished(&fRxFinished_l, timeoutMs_p))
        {
            /* Frame successfully received */
            fReturn = TRUE;
        }
        else
        {
            /* Timeout occurred */
            USART_DMACmd(USARTx, USART_DMAReq_Rx, DISABLE);
        }

        fRxFinished_l = FALSE;

    }

    return fReturn;
}

static void initGpio(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    memset(&GPIO_InitStructure, 0, sizeof(GPIO_InitTypeDef));

    /* Enable peripheral clocks */
    RCC_APB2PeriphClockCmd(USARTx_GPIO_RCC_PERIPH, ENABLE);
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);

    /*  USARTx: TX */
    GPIO_InitStructure.GPIO_Pin = USARTx_TX_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(USARTx_GPIO_PORT, &GPIO_InitStructure);

    /*  USARTx: RX */
    GPIO_InitStructure.GPIO_Pin = USARTx_RX_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(USARTx_GPIO_PORT, &GPIO_InitStructure);
}

static void initUsart(void)
{
    USART_InitTypeDef USART_InitStructure;

    memset(&USART_InitStructure, 0, sizeof(USART_InitTypeDef));

    /* Enable the USART periph */
    RCC_APB2PeriphClockCmd(USARTx_RCC_PERIPH, ENABLE);

    /* Configure the USART core */
    USART_StructInit(&USART_InitStructure);
    USART_InitStructure.USART_BaudRate = 3686400; //1843200//; //10500000;
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    USART_InitStructure.USART_StopBits = USART_StopBits_1;
    USART_InitStructure.USART_Parity = USART_Parity_No;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_Init(USARTx, &USART_InitStructure);
}

static void initNvic(void)
{
    NVIC_InitTypeDef   NVIC_InitStructure;

    memset(&NVIC_InitStructure, 0, sizeof(NVIC_InitTypeDef));

    /* Enable DMA1 Channel2 interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = DMAx_ChannelRx_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x0E;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x01;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    /* Enable DMA1 Channel3 interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = DMAx_ChannelTx_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x0E;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x01;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}
