==> OpenAutomationTechnologies/openSAFETY_DEMO/app/demo-sn-gpio/target/stm32f401rb/upserial.c <==
#include <sn/upserial.h>
#include <common/platform.h>
#include <stm32f4xx_hal.h>
#define USARTx                           USART1
#define USARTx_CLK_ENABLE()              __HAL_RCC_USART1_CLK_ENABLE()
#define DMAx_CLK_ENABLE()                __HAL_RCC_DMA2_CLK_ENABLE()
#define USARTx_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USARTx_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USARTx_CLK_DISABLE()             __HAL_RCC_USART1_CLK_DISABLE()
#define USARTx_RX_PIN                    GPIO_PIN_10
#define USARTx_TX_PIN                    GPIO_PIN_9
#define USARTx_GPIO_PORT                 GPIOA
#define USARTx_ALT_FUNC                  GPIO_AF7_USART1
#define USARTx_TX_DMA_CHANNEL            DMA_CHANNEL_4
#define USARTx_TX_DMA_STREAM             DMA2_Stream7
#define USARTx_RX_DMA_CHANNEL            DMA_CHANNEL_4
#define USARTx_RX_DMA_STREAM             DMA2_Stream2
#define USARTx_DMA_TX_IRQn               DMA2_Stream7_IRQn
#define USARTx_DMA_RX_IRQn               DMA2_Stream2_IRQn
#define USARTx_DMA_TX_IRQHandler         DMA2_Stream7_IRQHandler
#define USARTx_DMA_RX_IRQHandler         DMA2_Stream2_IRQHandler
#define USARTx_IRQ_Handler               USART1_IRQHandler
#define USARTx_IRQn                      USART1_IRQn

void upserial_exit(void)
{
    pfnTransfFin_l =  NULL;
    pfnReceiveFin_l = NULL;
    pfnTransfError_l = NULL;

    /* Close the USART peripherial */
    HAL_UART_DeInit(&UsartHandle_l);
}

BOOLEAN upserial_transmitBlock(volatile UINT8 * pData_p, UINT32 size_p)
{
    BOOLEAN fReturn = FALSE;

    if(pData_p != NULL && size_p > 0)
    {
        /* Perform a blocking UART transfer */
        if(HAL_UART_Transmit_DMA(&UsartHandle_l, (UINT8*)pData_p, size_p) == HAL_OK)
        {
            /* Wait until DMA transfer is finished */
            if(waitForTransferFinished(&fTxFinished_l, 0xFFFF))
            {
                /* Frame successfully transmitted */
                fReturn = TRUE;
            }
            else
            {
                /* Timeout occurred */
                (void)HAL_UART_DMAStop(&UsartHandle_l);
            }

            fTxFinished_l = FALSE;
        }
    }

    return fReturn;
}

BOOLEAN upserial_receiveBlock(volatile UINT8 * pData_p, UINT32 size_p, UINT32 timeoutMs_p)
{
    BOOLEAN fReturn = FALSE;

    if(pData_p != NULL && size_p > 0)
    {
        /* Perform a blocking UART receive */
        if(HAL_UART_Receive_DMA(&UsartHandle_l, (UINT8*)pData_p, size_p) == HAL_OK)
        {
            /* Wait until DMA transfer is finished */
            if(waitForTransferFinished(&fRxFinished_l, timeoutMs_p))
            {
                /* Frame successfully received */
                fReturn = TRUE;
            }
            else
            {
                /* Timeout occurred */
                (void)HAL_UART_DMAStop(&UsartHandle_l);
            }

            fRxFinished_l = FALSE;
        }
    }

    return fReturn;
}

static void initGpio(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;

    GPIO_InitStruct.Pin = USARTx_RX_PIN | USARTx_TX_PIN;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = USARTx_ALT_FUNC;
    HAL_GPIO_Init(USARTx_GPIO_PORT, &GPIO_InitStruct);
}

static BOOLEAN initUsart(void)
{
    BOOLEAN fReturn = FALSE;

    memset(&UsartHandle_l, 0, sizeof(UART_HandleTypeDef));

    /* Configure the USART core */
    UsartHandle_l.Instance = USARTx;
    UsartHandle_l.Init.BaudRate = 10500000;
    UsartHandle_l.Init.WordLength = UART_WORDLENGTH_8B;
    UsartHandle_l.Init.StopBits = UART_STOPBITS_1;
    UsartHandle_l.Init.Parity = UART_PARITY_NONE;
    UsartHandle_l.Init.Mode = UART_MODE_TX_RX;
    UsartHandle_l.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    UsartHandle_l.Init.OverSampling = UART_OVERSAMPLING_8;
    if(HAL_UART_Init(&UsartHandle_l) == HAL_OK)
    {
        fReturn = TRUE;
    }

    return fReturn;
}

static void initNvic(void)
{
    /* NVIC configuration for DMA transfer complete interrupt (USARTx_TX) */
    HAL_NVIC_SetPriority(USARTx_DMA_TX_IRQn, 1, 0);
    HAL_NVIC_EnableIRQ(USARTx_DMA_TX_IRQn);

    /* NVIC configuration for DMA transfer complete interrupt (USARTx_RX) */
    HAL_NVIC_SetPriority(USARTx_DMA_RX_IRQn, 1, 1);
    HAL_NVIC_EnableIRQ(USARTx_DMA_RX_IRQn);

    /* NVIC configuration for UART transfer complete interrupt */
    HAL_NVIC_SetPriority(USARTx_IRQn, 1, 0);
    HAL_NVIC_EnableIRQ(USARTx_IRQn);
}
